# roopes

./: .gitignore  Cargo.toml  Justfile  LICENSE  Makefile  README.md  ROOPeS.code-workspace  issues.md  package-lock.json  package.json  readme.md  roopes.code-workspace  ropes.code-workspace  rustfmt.toml  shell.nix
.cargo/: config.toml
.github/workflows/: rust.yml
examples/collision-simulator/: main.rs  truck.rs  vehicle.rs  vehicle_visitor.rs
examples/counting-hello-world/: main.rs
examples/counting-hello-world-observable-command/: main.rs
examples/hello-world-all-features/: log_handler.rs  main.rs
examples/lambda-logger/: main.rs
examples/prefix-logger/: log_message.rs  logger.rs  println_printer.rs
roopes_aggregates/: Cargo.toml
roopes_core/: Cargo.toml  README.md
roopes_core/src/: lib.rs
roopes_core/src/aggregates/: mod.rs
roopes_core/src/aggregates/command_executable/: command_executable.plantuml  mod.rs
roopes_core/src/aggregates/executable_command/: executable_command.plantuml  mod.rs
roopes_core/src/aggregates/executable_observer/: mod.rs  tests.rs
roopes_core/src/aggregates/handling_publisher/: mod.rs  publishing_handler.plantuml  subscribing_handler.plantuml  test.rs  tests.rs
roopes_core/src/aggregates/observing_command/: mod.rs  tests.rs
roopes_core/src/aggregates/subscribing_handler/: mod.rs  subscribing_handler.plantuml  tests.rs
roopes_core/src/aggregates/transforming_handler/: mod.rs  tests.rs
roopes_core/src/patterns/: mod.rs
roopes_core/src/patterns/abstract_factory/: lambda.rs  mod.rs
roopes_core/src/patterns/command/: executable.rs  hashable.rs  heap.rs  lambda.rs  mod.rs  tests.rs
roopes_core/src/patterns/heap_pool/: mod.rs  refcell_box.rs  tests.rs
roopes_core/src/patterns/observer/: hash_subject.rs  mod.rs  observer.plantuml  tests.rs  vec_subject.rs
roopes_core/src/patterns/publisher_subscriber/: heap.rs  mod.rs  publisher_subscriber.plantuml  tests.rs  vec_publisher.rs
roopes_core/src/patterns/state/: mod.rs  simple.rs  state.plantuml  tests.rs
roopes_core/src/patterns/transformer_chain/: heap.rs  mod.rs  transformer_chain.plantuml
roopes_core/src/primitives/: mod.rs
roopes_core/src/primitives/attachable/: mod.rs
roopes_core/src/primitives/detachable/: mod.rs
roopes_core/src/primitives/emitter/: emitter.plantuml  iterator.rs  lambda.rs  mod.rs  tests.rs
roopes_core/src/primitives/executable/: executable.plantuml  heap.rs  lambda.rs  mod.rs  tests.rs
roopes_core/src/primitives/handler/: handler.plantuml  hash.rs  heap.rs  lambda.rs  mod.rs  tests.rs
roopes_core/src/primitives/receiver/: heap.rs  lambda.rs  mod.rs  tests.rs
roopes_core/src/primitives/transformer/: heap.rs  lambda.rs  mod.rs  tests.rs  transformer.plantuml
roopes_derive/: Cargo.toml  README.md
roopes_derive/src/: common.rs  lib.rs
roopes_derive/src/builder/: blocks.rs  mod.rs  token_stream_builder_factory.rs  transformer_params.rs
roopes_derive/src/builder/test/: empty_pass.rs  invalid_unpopulated_fail.rs  invalid_unpopulated_fail.stderr  valid_populated_pass.rs
roopes_derive/src/publisher_subscriber/: blocks.rs  mod.rs  token_stream_pubsub_factory.rs  transformer_params.rs
roopes_derive/src/publisher_subscriber/test/: empty_pass.rs
roopes_derive/src/visitor/: blocks.rs  mod.rs  token_stream_visitor_factory.rs  transformer_params.rs  visitor_transformer_params.rs
roopes_derive/src/visitor/derive/: mod.rs  token_stream_visitor_factory.rs
roopes_examples/: Cargo.toml
roopes_examples/collision-simulator/: main.rs
roopes_examples/lambda-logger/: main.rs
roopes_examples/src/: lib.rs
roopes_examples/src/collision-simulator/: main.rs
roopes_examples/src/lambda-logger/: main.rs
roopes_examples/src/structured-logger/: log_formatter.rs  log_publisher.rs  main.rs  test.rs
roopes_examples/structured-logger/: log_message_subscriber.rs  log_publisher.rs  logger.rs  main.rs  prefix_formatter.rs  println_printer.rs
roopes_lib/: Cargo.toml  README.md
roopes_lib/src/: lib.rs
roopes_patterns/: Cargo.toml
roopes_primitives/: Cargo.toml
roopes_tests/: Cargo.toml
roopes_tests/src/: command.rs  emitter.rs  handler.rs  lib.rs  observer.rs  publisher_subscriber.rs  transformer.rs
ropes/: Cargo.toml
ropes_aggregates/: Cargo.toml
ropes_derive/: Cargo.toml
ropes_derive/src/: lib.rs
ropes_derive/src/builder/: builder_token_stream.rs  derive.rs  mod.rs
ropes_derive/src/builder/derive/: mod.rs  token_stream_builder_builder.rs  token_stream_builder_factory.rs
ropes_derive/src/patterns/builder/: builder.plantuml  mod.rs
ropes_derive/src/visitor/: mod.rs
ropes_derive/src/visitor/derive/: token_stream_visitor_factory.rs
ropes_examples/: Cargo.toml
ropes_examples/collision-simulator/: main.rs  vehicle_visitor.rs
ropes_examples/lambda-logger/: main.rs
ropes_examples/structured-logger/: log_message_subscriber.rs  log_publisher.rs  logger.rs  main.rs  println_printer.rs
ropes_lib/: Cargo.toml
ropes_patterns/: Cargo.toml
ropes_primitives/: Cargo.toml
ropes_tests/: Cargo.toml
ropes_tests/src/: command.rs  emitter.rs  handler.rs  lib.rs  observer.rs  publisher_subscriber.rs  transformer.rs
src/: lib.rs
(+136 files in other folders)
