[package]
name = "roopes_core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = true

[dependencies]
enclose = "1.1.8"
delegate = "0.9.0"
embed-doc-image = "0.1.4"

[dev-dependencies]
roopes ={ path = "../roopes_lib"}

[features]
doc-images = []

[package.metadata.docs.rs]
features = ["doc-images"]