[package]
name = "roopes_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
roopes = { path = "../roopes_lib" }
delegate = "0.9.0"
roopes_derive = { path = "../roopes_derive" }

[[example]]
name = "structured-logger"
path = "structured-logger/main.rs"

[[example]]
name = "lambda-logger"
path = "lambda-logger/main.rs"

[[example]]
name = "collision-simulator"
path = "collision-simulator/main.rs"
