[package]
name = "roopes-examples"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
roopes = { path = "../roopes_lib" }
delegate = "0.9.0"
roopes-derive = { path = "../roopes_derive" }

[[example]]
name = "structured-logger"
path = "src/structured-logger/main.rs"

[[example]]
name = "lambda-logger"
path = "src/lambda-logger/main.rs"

[[example]]
name = "collision-simulator"
path = "src/collision-simulator/main.rs"
