[package]
name = "roopes"
version = "0.1.0"
edition = "2021"

[lib]
doctest = true
path = "src/lib.rs"

[dependencies]
enclose = "1.1.8"
delegate = "0.9.0"
roopes_derive = { path = "../roopes_derive" }
roopes_core = { path = "../roopes_core" }
embed-doc-image = "0.1.4"

[features]
doc-images = []

[package.metadata.docs.rs]
# docs.rs uses a nightly compiler, so by instructing it to use our `doc-images` feature we
# ensure that it will render any images that we may have in inner attribute documentation.
features = ["doc-images"]