[package]
name = "roopes"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Roopes is a Rust Object Oriented Pattern Element System.  This crate provides generic traits and implementations for typical object-oriented patterns. It is intended to be used as a cluster of utility classes for implementing OOP-architected executables -- in Rust!"
homepage = "https://github.com/zwerdlds/roopes"
documentation = "https://docs.rs/roopes"
readme = "README.md"
keywords = ["structure", "object_oriented", "OOP"]
categories = ["data-structures"]

[lib]
doctest = true
path = "src/lib.rs"

[dependencies]
enclose = "1.1.8"
delegate = "0.9.0"
roopes-derive = { version= "0.1.0", path = "../roopes_derive" }
roopes-core = { version= "0.1.1", path = "../roopes_core" }
embed-doc-image = "0.1.4"

[features]
doc-images = []

[package.metadata.docs.rs]
features = ["doc-images"]