[package]
name = "roopes_tests"
version = "0.1.0"
edition = "2021"

[lib]
doctest = true

[dependencies]
enclose = "1.1.8"
delegate = "0.9.0"
roopes = { path = "../roopes_lib" }
roopes_primitives = { path = "../roopes_primitives" }
roopes_aggregates = { path = "../roopes_aggregates" }
roopes_patterns = { path = "../roopes_patterns" }
