[package]
name = "ropes_derive"
version = "0.1.0"
edition = "2021"

[lib]
doctest = true
proc-macro = true

[dependencies]
enclose = "1.1.8"
delegate = "0.9.0"
proc-macro2 = "1.0.49"
quote = "1.0.23"
heck = "0.4.1"
prettyplease = "0.2.6"
syn = { version = "2.0.18", features = ["extra-traits"] }
ropes_primitives = {path="../ropes_primitives"}
ropes_patterns = { path = "../ropes_patterns" }
