[package]
name = "ropes_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ropes = { path = "../ropes" }
delegate = "0.9.0"

[[example]]
name = "structured-logger"
path = "structured-logger/main.rs"

[[example]]
name = "lambda-logger"
path = "lambda-logger/main.rs"

[[example]]
name = "collision-simulator"
path = "collision-simulator/main.rs"
