[package]
name = "ropes_tests"
version = "0.1.0"
edition = "2021"

[lib]
doctest = true

[dependencies]
enclose = "1.1.8"
delegate = "0.9.0"
ropes = { path = "../ropes_lib" }
ropes_primitives = { path = "../ropes_primitives" }
ropes_aggregates = { path = "../ropes_aggregates" }
ropes_patterns = { path = "../ropes_patterns" }
